Mejoras a los condicionales

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Weather-app</title>
 </head>
 <body>
-    <section class="main">
+    <section class="section">
         <div class="container" id="container">
             <div class="time">
                 <div class="div-temp">
@@ -21,7 +21,6 @@
                     <div>
                         <span class="icon-city"></span>
                         <input type="text" id="input-city" readonly>
-
                     </div>
                 </div>
             </div>
