--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <section class="section">
         <div class="container" id="container">
+            <form id="search__form" class="search__form">
+                <input type="text" id="search__input" name="input__search" required placeholder="Ingrese localidad..."> 
+            </form>
             <div class="time">
                 <div class="div-temp">
                     <input type="text" id="input-temp" readonly>
