--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css/style.css">
+    <link rel="icon" href="https://img.icons8.com/doodle/100/000000/umbrella--v1.png">
     <title>Weather-app</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
                         <input type="text" id="input__date" readonly>
                     </div>
                     <div class="city">
-                        <img src="icons/map-pin.svg" class="icon__city" alt="Icono de la ciudad"></img>
+                        <img src="https://img.icons8.com/material/24/ffffff/marker--v1.png" class="icon__city" alt="Icono de la ciudad"/>
                         <input type="text" id="input__city" readonly>
                     </div>
                 </div>
