--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css/style.css">
+    <link rel="stylesheet" href="style/style.css/style.css">
     <link rel="icon" href="https://img.icons8.com/doodle/100/000000/umbrella--v1.png">
     <title>Weather-app</title>
 </head>
@@ -31,6 +31,6 @@
             </div>
         </div>
     </section>
-    <script src="index.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
