--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css/style.css">
+    <link rel="stylesheet" href="./style.css/style.css">
     <link rel="icon" href="https://img.icons8.com/doodle/100/000000/umbrella--v1.png">
     <title>Weather-app</title>
 </head>
 <body>
     <section class="section">
-        <div class="container" id="container">
-            <form id="search__form" class="search__form">
-                <input type="text" id="search__input" required placeholder=" Ingrese localidad ..."> 
-            </form>
-            <div class="time">
+        <div class="main__container" id="mainContainer">
+            <!-- <form id="searchForm" class="search__form">
+                <input type="text" id="searchInput" required placeholder=" Ingrese localidad ..."> 
+            </form> -->
+            <!-- <div class="time">
                 <div class="div__date">
                     <div>
                         <input type="text" id="input__date" readonly>
@@ -28,7 +28,10 @@
                     <input type="text" id="input__temp" readonly>
                     <img alt="Icono estado del tiempo" class="icon__temp" id="icon__temp">
                 </div>
-            </div>
+            </div> -->
+        </div>
+        <div class="footer__container" id="footerContainer">
+
         </div>
     </section>
     <script src="./scripts/index.js" type="module"></script>
