manipulación del dom

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Weather-app</title>
 </head>
 <body>
-    <section class="section">
+    <section class="container">
         <div class="main__container" id="mainContainer">
             <!-- <form id="searchForm" class="search__form">
                 <input type="text" id="searchInput" required placeholder=" Ingrese localidad ..."> 
@@ -30,9 +30,9 @@
                 </div>
             </div> -->
         </div>
-        <div class="footer__container" id="footerContainer">
+        <footer class="footer__container" id="footerContainer">
 
-        </div>
+        </footer>
     </section>
     <script src="./scripts/index.js" type="module"></script>
 </body>
