--- a/index.html
+++ b/index.html
@@ -9,26 +9,12 @@
     <title>Weather-app</title>
 </head>
 <body>
-    <section class="container">
+    <section class="container" id="container">
         <div class="main__container" id="mainContainer">
             <!-- <form id="searchForm" class="search__form">
                 <input type="text" id="searchInput" required placeholder=" Ingrese localidad ..."> 
             </form> -->
-            <!-- <div class="time">
-                <div class="div__date">
-                    <div>
-                        <input type="text" id="input__date" readonly>
-                    </div>
-                    <div class="city">
-                        <img src="https://img.icons8.com/material/24/ffffff/marker--v1.png" class="icon__city" alt="Icono de la ciudad"/>
-                        <input type="text" id="input__city" readonly>
-                    </div>
-                </div>
-                <div class="div__temp">
-                    <input type="text" id="input__temp" readonly>
-                    <img alt="Icono estado del tiempo" class="icon__temp" id="icon__temp">
-                </div>
-            </div> -->
+            
         </div>
         <footer class="footer__container" id="footerContainer">
 
