--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 
     <template id="templateViewMore">
-      <div class="viewMoreItem__container">
+      <div class="viewMoreItem__container" id="viewMoreIemContainer">
         <span class="item__container-day"></span>
         <div class="weather__container">
           <img  class='weather__icon' src="" alt="weather icon" />
@@ -51,6 +51,10 @@
         <span class="mainItems__percentage"></span>
         <span class="mainItems__description"></span>
       </div>
+    </template>
+
+    <template id="templateViewMoreContainer">
+
     </template>
 
     <script src="./scripts/index.js" type="module"></script>
