final manipulacion DOM

--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
 
     </template>
 
-    <script src="./scripts/index.js" type="module"></script>
+    <script src="./scripts/app.js" type="module"></script>
   </body>
 </html>
