--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body>
     <section class="container" id="container">
       <div class="main__container" id="mainContainer">
-        <!-- <form id="searchForm" class="search__form">
+        <form id="searchForm" class="search__form">
                 <input type="text" id="searchInput" required placeholder=" Ingrese localidad ..."> 
-            </form> -->
+            </form>
       </div>
       <footer class="footer__container" id="footerContainer">
         <div class="timeLapsItem__container"></div>
