Add config.js file

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <span class="weatherToday__description" id="weatherTodayDescription"></span>
       </div>
     </template>
+    <script type='text/javascript' src='./scripts/components/config.js'></script>
     <script src="./scripts/app.js" type="module"></script>
   </body>
 </html>
