--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <span id="location" class="location"></span>
         </div>
         <div class="weatherIcon__container" id="weatherIconContainer">
-          <img id="weatherIcon" class="" src="./public/img/images/thunderstorm.png"/>
+          <img id="weatherIcon" class=""/>
         </div>
         <div class="temperature__container">
           <span id="temperature" class="temperature"></span>
