--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./public/css/main.min.css">
     <link
       rel="icon"
-      href="./img/icons/umbrella.png"
+      href="/public/img/icons/umbrella.png"
     />
     <link
       rel="stylesheet"
@@ -104,6 +104,6 @@
         ></span>
       </div>
     </template>
-    <script src="/scripts/app.js" type="module"></script>
+    <script src="./scripts/app.js" type="module"></script>
   </body>
 </html>
