--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./public/css/main.min.css">
     <link
       rel="icon"
-      href="/public/img/icons/umbrella.png"
+      href="https://5pamm3r.github.io/umbrella/public/img/icons/umbrella.png"
     />
     <link
       rel="stylesheet"
